--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^18.7.6",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "animejs": "^3.2.1",
         "antd": "^4.20.7",
         "antd-img-crop": "^4.2.3",
         "axios": "^0.27.2",
@@ -53,6 +54,7 @@
         ]
     },
     "devDependencies": {
+        "@types/animejs": "^3.1.5",
         "@types/store": "^2.0.2",
         "node-sass": "^7.0.1",
         "ts-node": "^10.9.1"
